# core-api/internal/dto/asset.go
@@ -8,13 +8,15 @@ import (
 )
 
 type AssetListItemResponse struct {
-	AssetID     uint             `json:"assetId" minimum:"1"`
-	Name        string           `json:"name"`
-	ProjectID   uint             `json:"projectId" minimum:"1"`
-	Type        domain.AssetType `json:"type" enum:"character,object,tileSet,audio,ui,scenery"`
-	Description string           `json:"description"`
-	Tags        []string         `json:"tags"`
-	Version     uint             `json:"version"`
+	AssetID     uint               `json:"assetId" minimum:"1"`
+	Name        string             `json:"name"`
+	ProjectID   uint               `json:"projectId" minimum:"1"`
+	Type        domain.AssetType   `json:"type" enum:"character,object,tileSet,audio,ui,scenery"`
+	Description string             `json:"description"`
+	Perspective domain.Perspective `json:"perspective" enum:"Top-Down,Side-On,Isometric"`
+	Scale       json.RawMessage    `json:"scale"`
+	Tags        []string           `json:"tags"`
+	Version     uint               `json:"version"`
 }
 
 type GetAssetsResponse struct {
@@ -33,15 +35,16 @@ type AssetDetailRequest struct {
 }
 
 type AssetDetailResponse struct {
-	AssetID     uint             `json:"assetId" minimum:"1"`
-	Name        string           `json:"name"`
-	ProjectID   uint             `json:"projectId" minimum:"1"`
-	Type        domain.AssetType `json:"type" enum:"character,object,tileSet,audio,ui,scenery"`
-	Description string           `json:"description"`
-	Tags        []string         `json:"tags"`
-	Attributes  json.RawMessage  `json:"attributes"`
-	Content     json.RawMessage  `json:"content,omitempty"`
-	Version     uint             `json:"version"`
+	AssetID     uint               `json:"assetId" minimum:"1"`
+	Name        string             `json:"name"`
+	ProjectID   uint               `json:"projectId" minimum:"1"`
+	Type        domain.AssetType   `json:"type" enum:"character,object,tileSet,audio,ui,scenery"`
+	Description string             `json:"description"`
+	Perspective domain.Perspective `json:"perspective" enum:"Top-Down,Side-On,Isometric"`
+	Scale       json.RawMessage    `json:"scale"`
+	Tags        []string           `json:"tags"`
+	Content     json.RawMessage    `json:"content,omitempty"`
+	Version     uint               `json:"version"`
 }
 
 type RecordAssetRequest struct {
@@ -49,12 +52,16 @@ type RecordAssetRequest struct {
 }
 
 type RecordAssetResponse struct {
-	RecordID  uint            `json:"recordId" minimum:"1"`
-	AssetID   uint            `json:"assetId" minimum:"1"`
-	Version   uint            `json:"version"`
-	ContentID uint            `json:"contentId" minimum:"1"`
-	CreatedAt time.Time       `json:"createdAt"`
-	Content   json.RawMessage `json:"content,omitempty"`
+	RecordID    uint               `json:"recordId" minimum:"1"`
+	AssetID     uint               `json:"assetId" minimum:"1"`
+	Version     uint               `json:"version"`
+	ContentID   uint               `json:"contentId" minimum:"1"`
+	CreatedAt   time.Time          `json:"createdAt"`
+	Name        string             `json:"name"`
+	Description string             `json:"description"`
+	Perspective domain.Perspective `json:"perspective" enum:"Top-Down,Side-On,Isometric"`
+	Scale       json.RawMessage    `json:"scale"`
+	Content     json.RawMessage    `json:"content,omitempty"`
 }
 
 type AssetRecordResponse = RecordAssetResponse
@@ -76,24 +83,24 @@ type CopyAssetResponse struct {
 }
 
 type UpdateAssetRequest struct {
-	AssetID     uint              `json:"assetId" minimum:"1"`
-	Name        *string           `json:"name,omitempty"`
-	ProjectID   *uint             `json:"projectId,omitempty" minimum:"1"`
-	Type        *domain.AssetType `json:"type,omitempty" enum:"character,object,tileSet,audio,ui,scenery"`
-	Description *string           `json:"description,omitempty"`
-	Tags        *[]string         `json:"tags,omitempty"`
-	Attributes  *json.RawMessage  `json:"attributes,omitempty"`
+	AssetID     uint                `json:"assetId" minimum:"1"`
+	Name        *string             `json:"name,omitempty"`
+	Description *string             `json:"description,omitempty"`
+	Tags        *[]string           `json:"tags,omitempty"`
+	Perspective *domain.Perspective `json:"perspective,omitempty" enum:"Top-Down,Side-On,Isometric"`
+	Scale       *json.RawMessage    `json:"scale,omitempty"`
 }
 
 type UpdateAssetResponse struct {
-	AssetID     uint             `json:"assetId" minimum:"1"`
-	Name        string           `json:"name"`
-	ProjectID   uint             `json:"projectId" minimum:"1"`
-	Type        domain.AssetType `json:"type" enum:"character,object,tileSet,audio,ui,scenery"`
-	Description string           `json:"description"`
-	Tags        []string         `json:"tags"`
-	Attributes  json.RawMessage  `json:"attributes"`
-	Version     uint             `json:"version"`
+	AssetID     uint               `json:"assetId" minimum:"1"`
+	Name        string             `json:"name"`
+	ProjectID   uint               `json:"projectId" minimum:"1"`
+	Type        domain.AssetType   `json:"type" enum:"character,object,tileSet,audio,ui,scenery"`
+	Description string             `json:"description"`
+	Perspective domain.Perspective `json:"perspective" enum:"Top-Down,Side-On,Isometric"`
+	Scale       json.RawMessage    `json:"scale"`
+	Tags        []string           `json:"tags"`
+	Version     uint               `json:"version"`
 }
 
 type RollBackAssetRequest struct {
